--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+
 .vscode/
 
 _skbuild/
@@ -5,6 +6,8 @@ _skbuild/
 .envrc
 
 models/
+
+MANIFEST.in
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
