Update build system, fix windows builds

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,11 +1,17 @@
 cmake_minimum_required(VERSION 3.4...3.22)
 
-project(ggml_python)
+project(
+    ${SKBUILD_PROJECT_NAME}
+    VERSION ${SKBUILD_PROJECT_VERSION}
+)
 
 set(BUILD_SHARED_LIBS "On")
+set(CMAKE_WINDOWS_EXPORT_ALL_SYMBOLS ON)
 add_subdirectory(vendor/ggml)
 install(
     TARGETS ggml 
-    LIBRARY DESTINATION ggml
-    RUNTIME DESTINATION ggml
+    ARCHIVE DESTINATION ${CMAKE_CURRENT_SOURCE_DIR}/ggml
+    LIBRARY DESTINATION ${CMAKE_CURRENT_SOURCE_DIR}/ggml
+    RUNTIME DESTINATION ${CMAKE_CURRENT_SOURCE_DIR}/ggml
+    FRAMEWORK DESTINATION ${CMAKE_CURRENT_SOURCE_DIR}/ggml
 )
