--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -26,10 +26,11 @@ jobs:
           python-version: ${{ matrix.python-version }}
       - name: Install dependencies
         run: |
+          python3 -m pip install --upgrade pip pytest cmake scikit-build setuptools
           python3 -m pip install --verbose --editable .
       - name: Test with pytest
         run: |
-          pytest
+          python3 -m pytest
 
   build-windows:
 
@@ -48,10 +49,11 @@ jobs:
           python-version: ${{ matrix.python-version }}
       - name: Install dependencies
         run: |
+          python3 -m pip install --upgrade pip pytest cmake scikit-build setuptools
           python3 -m pip install --verbose --editable .
       - name: Test with pytest
         run: |
-          pytest
+          python3 -m pytest
 
   build-macos:
 
@@ -70,7 +72,8 @@ jobs:
           python-version: ${{ matrix.python-version }}
       - name: Install dependencies
         run: |
+          python3 -m pip install --upgrade pip pytest cmake scikit-build setuptools
           python3 -m pip install --verbose --editable .
       - name: Test with pytest
         run: |
-          pytest
+          python3 -m pytest
