Update submodule to use fork

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "vendor/ggml"]
 	path = vendor/ggml
-	url = git@github.com:ggerganov/ggml.git
+	url = git@github.com:dmille/ggml.git
 [submodule "examples/clip/CLIP"]
     path = examples/clip/CLIP
     url = git@github.com:openai/CLIP.git
