--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,6 +10,14 @@ set(CMAKE_WINDOWS_EXPORT_ALL_SYMBOLS ON)
 add_subdirectory(vendor/ggml)
 install(
     TARGETS ggml 
+    ARCHIVE DESTINATION ${SKBUILD_PLATLIB_DIR}/ggml
+    LIBRARY DESTINATION ${SKBUILD_PLATLIB_DIR}/ggml
+    RUNTIME DESTINATION ${SKBUILD_PLATLIB_DIR}/ggml
+    FRAMEWORK DESTINATION ${SKBUILD_PLATLIB_DIR}/ggml
+)
+# Temporary fix for https://github.com/scikit-build/scikit-build-core/issues/374
+install(
+    TARGETS ggml 
     ARCHIVE DESTINATION ${CMAKE_CURRENT_SOURCE_DIR}/ggml
     LIBRARY DESTINATION ${CMAKE_CURRENT_SOURCE_DIR}/ggml
     RUNTIME DESTINATION ${CMAKE_CURRENT_SOURCE_DIR}/ggml
