Update build config

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,26 +26,30 @@ set(CMAKE_WINDOWS_EXPORT_ALL_SYMBOLS ON)
 add_subdirectory(vendor/ggml)
 
 swig_add_library(
-    _ggml
-    LANGUAGE python OUTPUT_DIR "${SKBUILD_PLATLIB_DIR}"
+    libggml
+    TYPE USE_BUILD_SHARED_LIBS
+    LANGUAGE python
+    OUTPUT_DIR "${SKBUILD_PLATLIB_DIR}/ggml"
     SOURCES _ggml.i
 )
 
-target_include_directories(_ggml PUBLIC ${CMAKE_CURRENT_SCOURCE_DIR}/vendor/ggml/include/ggml)
-set_property(TARGET _ggml PROPERTY SWIG_USE_TARGET_INCLUDE_DIRECTORIES TRUE)
+target_include_directories(libggml PUBLIC ${CMAKE_CURRENT_SCOURCE_DIR}/vendor/ggml/include/ggml)
+set_property(TARGET libggml PROPERTY SWIG_USE_TARGET_INCLUDE_DIRECTORIES TRUE)
+set_property(TARGET libggml PROPERTY SWIG_DEPENDS ggml)
 
-target_link_libraries(_ggml PRIVATE Python::Module)
-target_link_libraries(_ggml PRIVATE ggml)
-
-set_target_properties(_ggml PROPERTIES OUTPUT_NAME _ggml)
-set_target_properties(_ggml PROPERTIES SWIG_MODULE_NAME _ggml)
-set_target_properties(_ggml PROPERTIES OUTPUT_DIR .)
+target_link_libraries(libggml PRIVATE Python::Module)
+target_link_libraries(libggml PRIVATE ggml)
 
 if(WIN32)
-    set_property(TARGET _ggml PROPERTY SUFFIX ".${Python_SOABI}.pyd")
+    set_property(TARGET libggml PROPERTY SUFFIX ".${Python_SOABI}.pyd")
 else()
-    set_property(TARGET _ggml
-                 PROPERTY SUFFIX ".${Python_SOABI}${CMAKE_SHARED_MODULE_SUFFIX}")
+    set_property(
+        TARGET libggml
+        PROPERTY SUFFIX ".${Python_SOABI}${CMAKE_SHARED_MODULE_SUFFIX}"
+    )
 endif()
 
-install(TARGETS _ggml DESTINATION . LIBRARY DESTINATION .)
+install(
+    TARGETS libggml 
+    DESTINATION . 
+)
