--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,8 +1,7 @@
 [build-system]
 requires = [
     "scikit-build-core>=0.4.5",
-    "cmake>=3.18",
-    "ninja",
+    "nanobind>=1.3.2"
 ]
 build-backend = "scikit_build_core.build"
 
