Add basic docs with rtd theme

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,6 +35,7 @@ cmake.verbose = true
 
 [project.optional-dependencies]
 test = ["pytest"]
+docs = ["mkdocs"]
 
 [project.urls]
 Homepage = "https://github.com/abetlen/ggml-python"
