Update rtd config

--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -12,3 +12,10 @@ build:
 
 mkdocs:
   configuration: mkdocs.yml
+
+python:
+  install:
+    - method: pip
+      path: .
+      extra_requirements:
+        - docs
