--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,7 +35,7 @@ cmake.verbose = true
 
 [project.optional-dependencies]
 test = ["pytest"]
-docs = ["mkdocs", "mkdocstrings[python]"]
+docs = ["mkdocs", "mkdocstrings[python]", "mkdocs-material"]
 
 [project.urls]
 Homepage = "https://github.com/abetlen/ggml-python"
