--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,4 +1,5 @@
 site_name: ggml-python
+repo_url: https://github.com/abetlen/ggml-python
 
 theme:
   name: material
@@ -12,9 +13,14 @@ plugins:
 
 markdown_extensions:
   - pymdownx.superfences
+  - pymdownx.inlinehilite
+  - pymdownx.snippets
   - pymdownx.tabbed:
       alternate_style: true 
-
+  - pymdownx.highlight:
+      anchor_linenums: true
+      line_spans: __span
+      pygments_lang_class: true
 
 watch:
   - ggml
