--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ authors = [
 requires-python = ">=3.7"
 dependencies = [
     "numpy>=1.20.0",
+    "typing_extensions>=4.6.3"
 ]
 classifiers = [
     "Programming Language :: Python :: 3",
