--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,6 +37,15 @@ cmake.verbose = true
 [project.optional-dependencies]
 test = ["pytest"]
 docs = ["mkdocs", "mkdocstrings[python]", "mkdocs-material"]
+convert = [
+    "accelerate==0.19.0",
+    "numpy==1.24.3",
+    "sentencepiece==0.1.98",
+    "torch==2.0.1",
+    "torchaudio==2.0.2",
+    "torchvision==0.15.2",
+    "transformers==4.29.2"
+]
 
 [project.urls]
 Homepage = "https://github.com/abetlen/ggml-python"
