--- a/examples/clip/requirements.txt
+++ b/examples/clip/requirements.txt
@@ -1,51 +1,23 @@
-asttokens==2.2.1
-backcall==0.2.0
-certifi==2023.5.7
-charset-normalizer==3.1.0
-cmake==3.26.3
-decorator==5.1.1
-executing==1.2.0
-filelock==3.12.0
+certifi==2022.12.7
+charset-normalizer==2.1.1
+filelock==3.9.0
 ftfy==6.1.1
+-e git+ssh://git@github.com/dmille/ggml-python.git@e02c2333f1b9c82895e8bff0036ba04ed0169e78#egg=ggml_python
 idna==3.4
-ipython==8.12.2
-jedi==0.18.2
 Jinja2==3.1.2
-lit==16.0.5.post0
-MarkupSafe==2.1.3
-matplotlib-inline==0.1.6
-mpmath==1.3.0
-networkx==3.1
-numpy==1.24.3
-nvidia-cublas-cu11==11.10.3.66
-nvidia-cuda-cupti-cu11==11.7.101
-nvidia-cuda-nvrtc-cu11==11.7.99
-nvidia-cuda-runtime-cu11==11.7.99
-nvidia-cudnn-cu11==8.5.0.96
-nvidia-cufft-cu11==10.9.0.58
-nvidia-curand-cu11==10.2.10.91
-nvidia-cusolver-cu11==11.4.0.1
-nvidia-cusparse-cu11==11.7.4.91
-nvidia-nccl-cu11==2.14.3
-nvidia-nvtx-cu11==11.7.91
-parso==0.8.3
-pexpect==4.8.0
-pickleshare==0.7.5
-Pillow==9.5.0
-prompt-toolkit==3.0.38
-ptyprocess==0.7.0
-pure-eval==0.2.2
-Pygments==2.15.1
+MarkupSafe==2.1.2
+mpmath==1.2.1
+networkx==3.0
+numpy==1.24.1
+Pillow==9.3.0
+pkg_resources==0.0.0
 regex==2023.6.3
-requests==2.31.0
-six==1.16.0
-stack-data==0.6.2
-sympy==1.12
-torch==2.0.1
-torchvision==0.15.2
+requests==2.28.1
+scipy==1.10.1
+sympy==1.11.1
+torch==2.0.1+cpu
+torchvision==0.15.2+cpu
 tqdm==4.65.0
-traitlets==5.9.0
-triton==2.0.0
-typing-extensions==4.6.3
-urllib3==2.0.3
+typing_extensions==4.6.3
+urllib3==1.26.13
 wcwidth==0.2.6
