--- a/examples/clip/requirements.txt
+++ b/examples/clip/requirements.txt
@@ -4,7 +4,7 @@ charset-normalizer==2.1.1
 clip==1.0
 filelock==3.9.0
 ftfy==6.1.1
-ggml-python==0.0.6
+ggml-python @ git+https://github.com/abetlen/ggml-python@main
 idna==3.4
 Jinja2==3.1.2
 MarkupSafe==2.1.2
