More docs improvements

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -12,6 +12,10 @@ plugins:
         python:
           options:
             members_order: source
+            group_by_category: false
+            signature_crossrefs: true
+            show_signature: true
+            docstring_section_style: table
   - search
 
 markdown_extensions:
