--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -15,7 +15,9 @@ plugins:
             group_by_category: false
             signature_crossrefs: true
             show_signature: true
-            docstring_section_style: table
+            docstring_section_style: list
+          import:
+            - https://docs.python.org/3/objects.inv
   - search
 
 markdown_extensions:
