--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,7 +36,7 @@ cmake.verbose = true
 
 [project.optional-dependencies]
 test = ["pytest"]
-docs = ["mkdocs", "mkdocstrings[python]", "mkdocs-material"]
+docs = ["mkdocs", "mkdocstrings[python]", "mkdocs-material", "pillow", "cairosvg"]
 convert = [
     "accelerate==0.19.0",
     "numpy==1.24.3",
