--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,6 +42,8 @@ convert = [
     "torchvision==0.15.2",
     "transformers==4.29.2"
 ]
+onnx = ["onnx==1.14.0"]
+onnx-dev = ["tabulate==0.9.0", "pytest-cov==4.1.0", "pytest-runner==6.0.0"]
 
 [project.urls]
 Homepage = "https://github.com/abetlen/ggml-python"
