--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,6 +33,7 @@ cmake.verbose = true
 [project.optional-dependencies]
 test = ["pytest"]
 docs = ["mkdocs", "mkdocstrings[python]", "mkdocs-material", "pillow", "cairosvg"]
+publish = ["build"]
 convert = [
     "accelerate==0.19.0",
     "numpy==1.24.3",
