--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,7 +44,15 @@ convert = [
     "transformers==4.29.2"
 ]
 onnx = ["onnx==1.14.0"]
-onnx-tests = ["tabulate==0.9.0", "pytest-cov==4.1.0", "pytest-runner==6.0.0", "onnxruntime==1.15.1"]
+onnx-tests = [
+    "tabulate==0.9.0", 
+    "pytest-cov==4.1.0", 
+    "pytest-runner==6.0.0", 
+    "onnxruntime==1.15.1", 
+    "InstructorEmbedding==1.0.1", 
+    "sentence_transformers==2.2.2", 
+    "sentencepiece==0.1.99"
+]
 
 [project.urls]
 Homepage = "https://github.com/abetlen/ggml-python"
