--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -10,7 +10,6 @@ on:
 
 jobs:
   build-linux:
-
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -27,13 +26,12 @@ jobs:
       - name: Install dependencies
         run: |
           python3 -m pip install --upgrade pip pytest cmake scikit-build setuptools
-          python3 -m pip install --verbose --editable .
+          python3 -m pip install --verbose --editable .[onnx,onnx-tests]
       - name: Test with pytest
         run: |
           python3 -m pytest
 
   build-windows:
-
     runs-on: windows-latest
     strategy:
       matrix:
@@ -56,7 +54,6 @@ jobs:
           python3 -m pytest
 
   build-macos:
-
     runs-on: macos-latest
     strategy:
       matrix:
