--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -25,8 +25,9 @@ jobs:
           python-version: ${{ matrix.python-version }}
       - name: Install dependencies
         run: |
-          python3 -m pip install --upgrade pip pytest cmake scikit-build setuptools onnxruntime onnx tabulate pytest-cov pytest-runner
-          python3 -m pip install --verbose --editable .
+          python3 -m pip install --upgrade pip pytest cmake scikit-build setuptools
+
+          python3 -m pip install --verbose --editable .[onnx,onnx-runtime]
       - name: Test with pytest
         run: |
           python3 -m pytest
@@ -47,8 +48,8 @@ jobs:
           python-version: ${{ matrix.python-version }}
       - name: Install dependencies
         run: |
-          python3 -m pip install --upgrade pip pytest cmake scikit-build setuptools
-          python3 -m pip install --verbose --editable .
+          python3 -m pip install --upgrade pip cmake scikit-build setuptools
+          python3 -m pip install --verbose --editable .[test,onnx,onnx-runtime]
       - name: Test with pytest
         run: |
           python3 -m pytest
@@ -57,7 +58,8 @@ jobs:
     runs-on: macos-latest
     strategy:
       matrix:
-        python-version: ["3.7", "3.8", "3.9", "3.10", "3.11"]
+        python-version: ["3.8", "3.9", "3.10", "3.11"]
+        # python-version: ["3.7", "3.8", "3.9", "3.10", "3.11"]
 
     steps:
       - uses: actions/checkout@v3
