--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -28,6 +28,8 @@ jobs:
         run: |
           python3 -m pip install --upgrade pip pytest cmake scikit-build setuptools
           python3 -m pip install --verbose --editable .
+      - name: Install gdb
+          run: sudo apt-get install -y gdb
       - name: Test with pytest
         run: |
           gdb --batch --quiet -ex r -ex "thread apply all bt" --args python3 -m pytest -vvvvs
