Add RESOURCE destination for metal files

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,6 +14,7 @@ install(
     LIBRARY DESTINATION ${SKBUILD_PLATLIB_DIR}/ggml
     RUNTIME DESTINATION ${SKBUILD_PLATLIB_DIR}/ggml
     FRAMEWORK DESTINATION ${SKBUILD_PLATLIB_DIR}/ggml
+    RESOURCE DESTINATION ${SKBUILD_PLATLIB_DIR}/ggml
 )
 # Temporary fix for https://github.com/scikit-build/scikit-build-core/issues/374
 install(
@@ -22,4 +23,5 @@ install(
     LIBRARY DESTINATION ${CMAKE_CURRENT_SOURCE_DIR}/ggml
     RUNTIME DESTINATION ${CMAKE_CURRENT_SOURCE_DIR}/ggml
     FRAMEWORK DESTINATION ${CMAKE_CURRENT_SOURCE_DIR}/ggml
+    RESOURCE DESTINATION ${SKBUILD_PLATLIB_DIR}/ggml
 )
