--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -43,6 +43,7 @@ jobs:
 
       - name: Test with pytest [pypy]
         if: ${{ startsWith(matrix.python-version, 'pypy') }}
+        run: |
           python3 -m pytest -k 'not ggml_test_onnx'
 
   build-windows:
@@ -55,10 +56,12 @@ jobs:
       - uses: actions/checkout@v3
         with:
           submodules: "true"
+
       - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python-version }}
+
       - name: Install dependencies
         run: |
           python3 -m pip install --upgrade pip cmake scikit-build setuptools
