Fix resource path

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,5 +23,5 @@ install(
     LIBRARY DESTINATION ${CMAKE_CURRENT_SOURCE_DIR}/ggml
     RUNTIME DESTINATION ${CMAKE_CURRENT_SOURCE_DIR}/ggml
     FRAMEWORK DESTINATION ${CMAKE_CURRENT_SOURCE_DIR}/ggml
-    RESOURCE DESTINATION ${SKBUILD_PLATLIB_DIR}/ggml
+    RESOURCE DESTINATION ${CMAKE_CURRENT_SOURCE_DIR}/ggml
 )
