--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -13,7 +13,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: ["3.8", "3.9", "3.10", "3.11", "pypy3.9", "pypy3.10"]
+        python-version: ["3.8", "3.9", "3.10", "3.11"]
 
     steps:
       - uses: actions/checkout@v3
@@ -25,32 +25,19 @@ jobs:
           python-version: ${{ matrix.python-version }}
 
       - name: Install dependencies
-        if: ${{ !startsWith(matrix.python-version, 'pypy') }}
         run: |
           python3 -m pip install --upgrade pip cmake scikit-build setuptools
           python3 -m pip install --verbose --editable .[test,onnx,onnx-tests,convert]
 
-      - name: Install dependencies [pypy]
-        if: ${{ startsWith(matrix.python-version, 'pypy') }}
-        run: |
-          python3 -m pip install --upgrade pip cmake scikit-build setuptools
-          python3 -m pip install --verbose --editable .[test]
-
       - name: Test with pytest
-        if: ${{ !startsWith(matrix.python-version, 'pypy') }}
         run: |
           python3 -m pytest
-
-      - name: Test with pytest [pypy]
-        if: ${{ startsWith(matrix.python-version, 'pypy') }}
-        run: |
-          python3 -m pytest --ignore-glob='*onnx*'
 
   build-windows:
     runs-on: windows-latest
     strategy:
       matrix:
-        python-version: ["3.8", "3.9", "3.10", "3.11", "pypy3.9", "pypy3.10"]
+        python-version: ["3.8", "3.9", "3.10", "3.11"]
 
     steps:
       - uses: actions/checkout@v3
@@ -61,33 +48,21 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python-version }}
+
       - name: Install dependencies
-        if: ${{ !startsWith(matrix.python-version, 'pypy') }}
         run: |
           python3 -m pip install --upgrade pip cmake scikit-build setuptools
           python3 -m pip install --verbose --editable .[test,onnx,onnx-tests,convert]
 
-      - name: Install dependencies [pypy]
-        if: ${{ startsWith(matrix.python-version, 'pypy') }}
-        run: |
-          python3 -m pip install --upgrade pip cmake scikit-build setuptools
-          python3 -m pip install --verbose --editable .[test]
-
       - name: Test with pytest
-        if: ${{ !startsWith(matrix.python-version, 'pypy') }}
         run: |
           python3 -m pytest
-
-      - name: Test with pytest [pypy]
-        if: ${{ startsWith(matrix.python-version, 'pypy') }}
-        run: |
-          python3 -m pytest --ignore-glob='*onnx*'
 
   build-macos:
     runs-on: macos-latest
     strategy:
       matrix:
-        python-version: ["3.8", "3.9", "3.10", "3.11", "pypy3.9", "pypy3.10"]
+        python-version: ["3.8", "3.9", "3.10", "3.11"]
 
     steps:
       - uses: actions/checkout@v3
@@ -99,23 +74,10 @@ jobs:
           python-version: ${{ matrix.python-version }}
 
       - name: Install dependencies
-        if: ${{ !startsWith(matrix.python-version, 'pypy') }}
         run: |
           python3 -m pip install --upgrade pip cmake scikit-build setuptools
           python3 -m pip install --verbose --editable .[test,onnx,onnx-tests,convert]
 
-      - name: Install dependencies [pypy]
-        if: ${{ startsWith(matrix.python-version, 'pypy') }}
-        run: |
-          python3 -m pip install --upgrade pip cmake scikit-build setuptools
-          python3 -m pip install --verbose --editable .[test]
-
       - name: Test with pytest
-        if: ${{ !startsWith(matrix.python-version, 'pypy') }}
         run: |
           python3 -m pytest
-
-      - name: Test with pytest [pypy]
-        if: ${{ startsWith(matrix.python-version, 'pypy') }}
-        run: |
-          python3 -m pytest --ignore-glob='*onnx*'
