--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -84,6 +84,8 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
+        with:
+          submodules: "true"
 
       - name: Dependencies
         run: |
