--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -103,3 +103,23 @@ jobs:
       - name: Test with pytest
         run: |
           make test
+
+  build-macos-metal:
+
+    runs-on: macos-latest
+
+    steps:
+      - uses: actions/checkout@v3
+        with:
+          submodules: "true"
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: "3.8"
+      - name: Install dependencies
+        run: |
+          python3 -m pip install --upgrade pip pytest cmake scikit-build setuptools
+          CMAKE_ARGS="-DGGML_METAL=On" python3 -m pip install --verbose --editable .
+      - name: Test with pytest
+        run: |
+          python3 -m pytest
