--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -26,7 +26,7 @@ jobs:
 
       - name: Install dependencies
         run: |
-          python3 -m pip install --upgrade pip cmake scikit-build setuptools
+          python3 -m pip install --upgrade pip
           python3 -m pip install --verbose --editable .[test,onnx,onnx-tests,convert]
 
       - name: Test with pytest
