--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -122,7 +122,7 @@ jobs:
       - name: Install dependencies
         run: |
           python3 -m pip install --upgrade pip pytest cmake scikit-build setuptools
-          CMAKE_ARGS="-DGGML_METAL=On" python3 -m pip install --verbose --editable .
+          CMAKE_ARGS="-DGGML_METAL=On" python3 -m pip install --verbose --editable .[test,onnx,onnx-tests,convert]
       - name: Test with pytest
         run: |
           python3 -m pytest
