misc: speed up tests by only check tests directory

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,6 +38,7 @@ input = "ggml/__init__.py"
 
 [tool.pytest.ini_options]
 addopts = "--ignore=vendor"
+testpaths = "tests"
 
 [project.optional-dependencies]
 test = ["pytest"]
