--- a/.github/workflows/wheels.yaml
+++ b/.github/workflows/wheels.yaml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-20.04] #, windows-2019, macos-11]
+        os: [ubuntu-20.04, macos-11] #, windows-2019]
 
     steps:
       - uses: actions/checkout@v3
@@ -25,6 +25,7 @@ jobs:
           CIBW_REPAIR_WHEEL_COMMAND: ""
           # skip building wheels for these platforms
           CIBW_SKIP: pp* cp36-* cp37-* *-musllinux*
+          CMAKE_ARGS: -DGGML_METAL=OFF
         with:
           package-dir: .
           output-dir: wheelhouse
