--- a/.github/workflows/wheels-index.yaml
+++ b/.github/workflows/wheels-index.yaml
@@ -34,8 +34,10 @@ jobs:
         uses: actions/configure-pages@v4
       - name: Build
         run: |
-          mkdir -p index/whl/cpu
-          ./scripts/releases-to-pep-503.sh index/whl/cpu
+          ./scripts/releases-to-pep-503.sh index/whl/cpu '^[v]?[0-9]+\.[0-9]+\.[0-9]+$'
+          ./scripts/releases-to-pep-503.sh index/whl/cu121 '^[v]?[0-9]+\.[0-9]+\.[0-9]+$-cu121'
+          ./scripts/releases-to-pep-503.sh index/whl/cu122 '^[v]?[0-9]+\.[0-9]+\.[0-9]+$-cu122'
+          ./scripts/releases-to-pep-503.sh index/whl/cu123 '^[v]?[0-9]+\.[0-9]+\.[0-9]+$-cu123'
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
