fix: Install runtime dlls alongside shared library

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -35,3 +35,7 @@ install(
     FRAMEWORK DESTINATION ${GGML_PYTHON_INSTALL_DIR}
     RESOURCE DESTINATION ${GGML_PYTHON_INSTALL_DIR}
 )
+install(
+    FILES $<TARGET_RUNTIME_DLLS:ggml>
+    DESTINATION ${GGML_PYTHON_INSTALL_DIR}
+)
