--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -27,10 +27,16 @@ jobs:
       - name: Install dependencies
         run: |
           python3 -m pip install --upgrade pip pytest cmake scikit-build setuptools
-          python3 -m pip install --verbose --editable .
+          python3 -m pip install \
+            --verbose \
+            --config-settings cmake.args='-DCMAKE_BUILD_TYPE=Debug;-DCMAKE_CXX_FLAGS=-g3;-DCMAKE_C_FLAGS=-g3' \
+            --config-settings cmake.verbose=true \
+            --config-settings logging.level=INFO \
+            --config-settings install.strip=false \
+            --editable .
       - name: Test with pytest
         run: |
-          python3 -m pytest
+          gdb -ex "set pagination off" -ex r -ex bt -ex q -return-child-result --args python -m pytest -s -vvvv
 
   build-windows:
 
@@ -51,10 +57,16 @@ jobs:
       - name: Install dependencies
         run: |
           python3 -m pip install --upgrade pip pytest cmake scikit-build setuptools
-          python3 -m pip install --verbose --editable .
+          python3 -m pip install \
+            --verbose \
+            --config-settings cmake.args='-DCMAKE_BUILD_TYPE=Debug;-DCMAKE_CXX_FLAGS=-g3;-DCMAKE_C_FLAGS=-g3' \
+            --config-settings cmake.verbose=true \
+            --config-settings logging.level=INFO \
+            --config-settings install.strip=false \
+            --editable .
       - name: Test with pytest
         run: |
-          python3 -m pytest
+          gdb -ex "set pagination off" -ex r -ex bt -ex q -return-child-result --args python -m pytest -s -vvvv
 
   build-macos:
 
@@ -74,35 +86,16 @@ jobs:
       - name: Install dependencies
         run: |
           python3 -m pip install --upgrade pip pytest cmake scikit-build setuptools
-          python3 -m pip install --verbose --editable .
+          python3 -m pip install \
+            --verbose \
+            --config-settings cmake.args='-DCMAKE_BUILD_TYPE=Debug;-DCMAKE_CXX_FLAGS=-g3;-DCMAKE_C_FLAGS=-g3' \
+            --config-settings cmake.verbose=true \
+            --config-settings logging.level=INFO \
+            --config-settings install.strip=false \
+            --editable .
       - name: Test with pytest
         run: |
-          python3 -m pytest
-
-  # build-linux-opencl:
-  #   runs-on: ubuntu-latest
-
-  #   steps:
-  #     - uses: actions/checkout@v3
-  #       with:
-  #         submodules: "true"
-
-  #     - name: Dependencies
-  #       run: |
-  #         wget -O- https://apt.repos.intel.com/intel-gpg-keys/GPG-PUB-KEY-INTEL-SW-PRODUCTS.PUB | gpg --dearmor | sudo tee /usr/share/keyrings/oneapi-archive-keyring.gpg > /dev/null
-  #         echo "deb [signed-by=/usr/share/keyrings/oneapi-archive-keyring.gpg] https://apt.repos.intel.com/oneapi all main" | sudo tee /etc/apt/sources.list.d/oneAPI.list  
-  #         sudo apt-get update
-  #         sudo apt-get install -y --no-install-recommends llvm intel-oneapi-runtime-opencl intel-oneapi-runtime-compilers libclblast-dev
-  #         sudo apt-get install -y python3-dev python3-pip make
-      
-  #     - name: Setup
-  #       run: |
-  #         python3 -m pip install pytest
-  #         make build.clblast
-
-  #     - name: Test with pytest
-  #       run: |
-  #         make test
+          gdb -ex "set pagination off" -ex r -ex bt -ex q -return-child-result --args python -m pytest -s -vvvv
 
   build-macos-metal:
 
@@ -119,7 +112,13 @@ jobs:
       - name: Install dependencies
         run: |
           python3 -m pip install --upgrade pip pytest cmake scikit-build setuptools
-          python3 -m pip install --verbose --editable . --config-settings=cmake.args='-DGGML_METAL=On'
+          python3 -m pip install \
+            --verbose \
+            --config-settings cmake.args='-DCMAKE_BUILD_TYPE=Debug;-DCMAKE_CXX_FLAGS=-g3;-DCMAKE_C_FLAGS=-g3;-DGGML_METAL=On' \
+            --config-settings cmake.verbose=true \
+            --config-settings logging.level=INFO \
+            --config-settings install.strip=false \
+            --editable .
       - name: Test with pytest
         run: |
-          python3 -m pytest
+          gdb -ex "set pagination off" -ex r -ex bt -ex q -return-child-result --args python -m pytest -s -vvvv
