--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,8 @@ authors = [
 requires-python = ">=3.7"
 dependencies = [
     "numpy>=1.20.0",
-    "typing_extensions>=4.6.3"
+    "typing_extensions>=4.6.3",
+    "importlib_resources>=6.4.0; python_version < '3.9'",
 ]
 classifiers = [
     "Programming Language :: Python :: 3",
